# xiaoclaw

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  index.html  partitions_xiaoclaw.csv  sdkconfig  sdkconfig.defaults.esp32s3
.github/workflows/: ESP32-P4 Build.yml  build.yml  pages.yml
assets/: script.js  styles.css
docs/: agent-architecture.md  agent-optimization.md  cron-architecture.md  cron-time-tools.md  heartbeat-architecture.md  mcp-first-class-tools.md  memory-architecture.md  memory-optimization.md  skills-architecture.md  skills-builtin.md  skills-optimization.md  skills-reference.md  time-architecture.md  tools-architecture.md  wake-word-flow.md
fatfs_data/lua/: hello.lua
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  device_state_machine.cc  idf_component.yml  main.cc
main/audio/: audio_codec.h  audio_service.cc  audio_service.h
main/bridge/: bridge.cc  bridge.h
main/display/: display.h  emote_display.cc  lcd_display.cc
main/mimi/: CMakeLists.txt  idf_component.yml  mimi.c  mimi.h  mimi_config.h  mimi_secrets.h.example
partitions/: partitions_xiaoclaw.csv
partitions/v2/: 4m.csv
scripts/: mcp_server.py
scripts/django_mcp/: manage.py
spiffs_data/: mcp-servers.md
website/: index.html
xiaoclaw-esp32-client/: .gitignore  CMakeLists.txt  README_ru.md  sdkconfig.defaults
xiaoclaw-esp32-client/.github/workflows/: build.yml
xiaoclaw-esp32-client/include/: app_config.h  board_config.h  xiaoclaw_app.h
xiaoclaw-esp32-client/main/: CMakeLists.txt  board_config.c  lcd_init_cmds.c  main.c  xiaoclaw_app.c
(+145 files in other folders)
